[gd_scene load_steps=8 format=2]

[ext_resource path="res://recursos/Environment/spikes_top.png" type="Texture" id=1]
[ext_resource path="res://recursos/Sfx/Explosion 8.wav" type="AudioStream" id=2]
[ext_resource path="res://juego/objetos/Pinchos_v2.gd" type="Script" id=3]
[ext_resource path="res://recursos/Particles/smoke.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "caer"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -22 ), Vector2( -5, -22 ), Vector2( 5, -22 ), Vector2( -4, -22 ), Vector2( 4, -22 ), Vector2( -5, -22 ), Vector2( 0, -22 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 1.06146,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0.2 )
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "caer"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.298039, 0.0313726, 0.0313726, 1 ), Color( 0.811765, 0.168627, 0.168627, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "destruirse"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ParticlesImpactoPlataforma:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="Pinchos_v2" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 6
script = ExtResource( 3 )

[node name="Colisionador2" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -25.8563, -6.66798, -18.3711, -38.9176, 18.0449, -38.9176, 25.4964, -6.38737 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.70902, 0.141176, 0.141176, 1 )
position = Vector2( 0, -22 )
scale = Vector2( 0.6, 0.8 )
texture = ExtResource( 1 )

[node name="DetectorColision" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 6

[node name="Colisionador" type="CollisionPolygon2D" parent="DetectorColision"]
polygon = PoolVector2Array( -25.8563, -6.66798, -18.3711, -38.9176, 18.0449, -38.9176, 25.4964, -6.38737 )

[node name="DetectorPersonaje" type="RayCast2D" parent="."]
cast_to = Vector2( 0, -500 )
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/caer = SubResource( 1 )
anims/default = SubResource( 2 )
anims/destruirse = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="ParticlesImpactoPlataforma" type="CPUParticles2D" parent="."]
emitting = false
amount = 6
lifetime = 0.5
one_shot = true
explosiveness = 0.4
randomness = 0.5
draw_order = 1
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 25.0
color = Color( 0.764706, 0.741176, 0.741176, 0.572549 )
[connection signal="body_entered" from="DetectorColision" to="." method="_on_DetectorColision_body_entered"]
